--- a/scraper/package.json
+++ b/scraper/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "amqplib": "^0.5.5",
+    "dotenv": "^8.2.0",
     "pm2": "^4.2.3",
     "puppeteer": "^2.1.1",
     "redis": "^3.0.2"
