chore: update init logic

--- a/scraper/.env.example
+++ b/scraper/.env.example
@@ -1,3 +1,9 @@
+# RabbitMQ
 AMQP_ADDR=localhost:5672
 AMQP_USER=guest
 AMQP_PASS=guest
+AMQP_PREFETCH=3
+
+# Puppeteer
+PPTR_HEADLESS=true
+PPTR_SLOW_MO=0
