--- a/scraper/package.json
+++ b/scraper/package.json
@@ -1,10 +1,10 @@
 {
   "name": "scraper",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "src/main.js",
   "scripts": {
-    "dev": "node main.js",
-    "prod": "pm2 start main.js"
+    "dev": "node src/main.js",
+    "prod": "pm2 start src/main.js"
   },
   "author": "Alexey Khrushch <alexeykhr@outlook.com>",
   "license": "MIT",
